--- a/slider/style.css
+++ b/slider/style.css
@@ -38,7 +38,7 @@ img {
 }
 
 .btn {
-	background-color:  rebeccapurple;
+	background-color:  rgb(94, 92, 95);
 	color: #fff;
 	border: none;
 	padding: 0.5rem;
